--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -7,14 +7,14 @@
 
 <body>
 
-<h1> Edit Restaurant </h1>
+<h1> Edit Categories </h1>
 
 
-<form action="{{ url_for('editCategory',restaurant_id = restaurant.id)}}" method = 'post'>
+<form action="{{ url_for('editCategory',category_id = category.id)}}" method = 'post'>
 
 
 	<p>Name:</p>
-		<input type ='text' size='30' name='name' placeholder = '{{restaurant.name }}'>
+		<input type ='text' size='30' name='name' placeholder = '{{category.name }}'>
 
 
 <input type='submit' value='Edit'>
