--- a/templates/editWeapon.html
+++ b/templates/editWeapon.html
@@ -4,7 +4,7 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	</head>
 
-<body><h1> Edit Menu Item </h1>
+<body><h1> Edit Weapon </h1>
 
 <form action="#" method = 'post'>
 
