--- a/templates/deleteWeapon.html
+++ b/templates/deleteWeapon.html
@@ -15,7 +15,7 @@
 
 </form>
 
-<a href = "{{url_for('showCategories')}}"> Cancel </a>
+<a href = "{{url_for('showCategories',user_id=user_id)}}"> Cancel </a>
 </body>
 
 </html>
