--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -10,17 +10,17 @@
 <h1> Edit Categories </h1>
 
 
-<form action="{{ url_for('editCategory',category_id = category.id)}}" method = 'post'>
+<form action="{{ url_for('editCategory',category_id = category.id, user_id=user_id)}}" method = 'post'>
 
 
 	<p>Name:</p>
-		<input type ='text' size='30' name='name' placeholder = '{{category.name }}'>
+		<input type ='text' size='30' name='name' placeholder = '{{category.name }}' required>
 
 
 <input type='submit' value='Edit'>
 
 
-<a href = "{{url_for('showCategories')}}"> Cancel </a>
+<a href = "{{url_for('showCategories',user_id=user_id)}}"> Cancel </a>
 
 </form>
 </body>
