--- a/templates/editWeapon.html
+++ b/templates/editWeapon.html
@@ -19,7 +19,7 @@
 <input type='submit' value='Edit'>
 
 
-<a href = "{{url_for('showCategories')}}"> Cancel </a>
+<a href = "{{url_for('showCategories',user_id=user_id)}}"> Cancel </a>
 
 
 </form>
