--- a/templates/newWeapon.html
+++ b/templates/newWeapon.html
@@ -11,11 +11,11 @@
 
 
 	<p>Name:</p>
-		<input type ='text' size='30' name='name'>
+		<input type ='text' size='30' name='name' required>
 	<p>Description:</p>
-		<input type ='text' size='30' name='description'>
+		<input type ='text' size='30' name='description' required>
 	<p>Picture URL:</p>
-		<input type ='text' size='30' name='picture'>
+		<input type ='text' size='30' name='picture' required>
 	</br>
 
 </br>
@@ -24,7 +24,7 @@
 </form>
 
 </br>
-<a href="{{ url_for('showCategories') }}" > HOME </a>
+<a href="{{ url_for('showCategories',user_id=user_id) }}" > HOME </a>
 
 </body>
 </html>
