--- a/templates/newUser.html
+++ b/templates/newUser.html
@@ -16,12 +16,8 @@
 		</br>
 		</br>
 
-  <input type='submit' value='Login'>
+  <input type='submit' value='Register'>
   </form>
-
-	<a id="SignUp" href="{{url_for('newUser')}}">Sign up</a>
-	</br>
-	</br>
 
 </div>
 </body>
