--- a/templates/newUser.html
+++ b/templates/newUser.html
@@ -10,14 +10,19 @@
 
 
   	<p>email:</p>
-  		<input type ='text' size='30' name='email' required>
+  		<input type ='text' size='30' name='newEmail' required>
     <p>password:</p>
-    	<input type ='password' size='30' name='password' required>
+    	<input type ='password' size='30' name='newPassword' required>
 		</br>
 		</br>
 
   <input type='submit' value='Register'>
   </form>
+
+  <a id="SignUp" href = "{{url_for('loginSession')}}"> Cancel </a>
+
+  </br>
+  </br>
 
 </div>
 </body>
