Id check and google login.

--- a/templates/deleteCategory.html
+++ b/templates/deleteCategory.html
@@ -16,7 +16,7 @@
 
 </form>
 
-<a href = "{{url_for('showCategories',user_id=user_id)}}"> Cancel </a>
+<a href = "{{url_for('showCategories')}}"> Cancel </a>
 </body>
 
 </html>
