--- a/templates/editWeapon.html
+++ b/templates/editWeapon.html
@@ -9,7 +9,7 @@
 <form action="#" method = 'post'>
 
 	<p>Name:</p>
-		<input type ='text' size='30' name='name' placeholder = '{{item.name }}'>
+		<input type ='text' size='30' name='name' placeholder = '{{item.name}}'>
 	<p>Description:</p>
 		<input type ='text' size='30' name='description' placeholder = '{{item.description}}'>
 	<p>Price:</p>
@@ -19,7 +19,7 @@
 <input type='submit' value='Edit'>
 
 
-<a href = "{{url_for('showCategories',user_id=user_id)}}"> Cancel </a>
+<a href = "{{url_for('showCategories')}}"> Cancel </a>
 
 
 </form>
