--- a/templates/newWeapon.html
+++ b/templates/newWeapon.html
@@ -24,7 +24,7 @@
 </form>
 
 </br>
-<a href="{{ url_for('showCategories',user_id=user_id) }}" > HOME </a>
+<a href="{{ url_for('showCategories') }}" > HOME </a>
 
 </body>
 </html>
