--- a/templates/noDelete.html
+++ b/templates/noDelete.html
@@ -9,7 +9,7 @@
 </br>
 <p>Only the user that created  "{{name}}" can delete it!</p>
 
-<a href="{{ url_for('showCategories',user_id=user_id) }}" > HOME </a>
+<a href="{{ url_for('showCategories')}}" > HOME </a>
 
 </body>
 </html>
