--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -10,7 +10,7 @@
 <h1> Edit Categories </h1>
 
 
-<form action="{{ url_for('editCategory',category_id = category.id, user_id=user_id)}}" method = 'post'>
+<form action="{{ url_for('editCategory',category_id = category.id)}}" method = 'post'>
 
 
 	<p>Name:</p>
@@ -20,7 +20,7 @@
 <input type='submit' value='Edit'>
 
 
-<a href = "{{url_for('showCategories',user_id=user_id)}}"> Cancel </a>
+<a href = "{{url_for('showCategories')}}"> Cancel </a>
 
 </form>
 </body>
