--- a/templates/login.html
+++ b/templates/login.html
@@ -1,61 +1,33 @@
+<!doctype html>
 <html>
-
-<head>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-  </script>
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<meta name="google-signin-client_id" content="801689158274-gikf3j7bul5evn4gl2fr43lhtahu20dn.apps.googleusercontent.com">
-</head>
-<body>
-<div class = 'pane quarter'>
-  <form action="#" method = 'post'>
+  <head>
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+  </head>
+  <body>
+  <div class = 'pane quarter'>
+    <form action="#" method = 'post'>
 
 
-  	<p>email:</p>
-  		<input type ='text' size='30' name='email' required>
-    <p>password:</p>
-    	<input type ='password' size='30' name='password' required>
-		</br>
-		</br>
+    	<p>email:</p>
+    		<input type ='text' size='30' name='email' required>
+      <p>password:</p>
+      	<input type ='password' size='30' name='password' required>
+  		</br>
+  		</br>
 
-  <input type='submit' value='Login'>
-  </form>
+    <input type='submit' value='Login'>
+    </form>
+    <br>
+    <br>
 
-	<a id="SignUp" href="{{url_for('newUser')}}">Sign up</a>
-	</br>
-	</br>
-	<div class="g-signin2" data-onsuccess="onSignIn"></div>
-  <a href="#" onclick="signOut();">Sign out</a>
-  <br>
-	</div>
+    <a id="SignUp" href="{{url_for('newUser')}}">Sign up</a>
 
-</div>
-</body>
+    <br>
+    <br>
+  	</div>
 
-<script type="text/javascript">
-  function onSignIn(googleUser) {
-      var profile = googleUser.getBasicProfile();
-      if (profile) {
-  				// Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
-  				$.ajax({
-  					type: 'POST',
-  					processData: false,
-  					data: {
-              id: profile.getId(),
-              email: profile.getEmail(),
-            },
-            url: '/gconnect',
-  				});
-			}
-    }
 
-  function signOut() {
-    var auth2 = gapi.auth2.getAuthInstance();
-    auth2.signOut().then(function () {
-      console.log('User signed out.');
-    });
-  }
-</script>
 
+  </div>
+  </body>
 </html>
