--- a/templates/loginSucessful.html
+++ b/templates/loginSucessful.html
@@ -8,14 +8,7 @@
 <div class = 'pane quarter'>
 	<h1>Great Medieval Weapons Catalog</h1>
 
-	<a href="{{ url_for('newCategory',user_id = user_id)}}" > <h3> Create a New Category </h3> </a>
-
-	<p>Email: {{user.email}}</p>
-
-	<p>Password: {{user.password}}</p>
-
-	<p>User id: {{user.id}}</p>
-
+	<a href="{{ url_for('showCategories')}}" > <h3> Create a New Category </h3> </a>
 
 </div>
 
