Aded some animations and fixed bugs.

--- a/templates/newUser.html
+++ b/templates/newUser.html
@@ -19,7 +19,7 @@
   <input type='submit' value='Register'>
   </form>
 
-  <a id="SignUp" href = "{{url_for('loginSession')}}"> Cancel </a>
+  <a id="SignUp" href = "{{ url_for('showCategories') }}"> Cancel </a>
 
   </br>
   </br>
