--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,10 @@ p               { color: #CCCCCC;}
 a               {text-decoration: none; color:#FFFFCC; font-size: 25px;
                     font-family: Arial, Helvetica, sans-serif;}
 
+.buton         {font-size: 15px; color: black; border-radius: 5px; background-color: lightgrey; border: 1px solid grey; padding:5px;}
+.buton :hover  {background-color: lightblue; font-style: italic;}
+
+
 .pane           {position:absolute; left: 25%; border: 2px solid;
                     border-radius: 25px; padding: 5px; margin: 5px;
                     border-color: #999999; background-color: #333333; }
@@ -26,5 +30,3 @@ a               {text-decoration: none; color:#FFFFCC; font-size: 25px;
 #EditC, #DelC   {font-family: 'Underdog', cursive;}
 #DelC           {font-size: 10px;}
 #EditC          {font-size: 15px;}
-#SignUp         {font-size: 15px; color: black; border-radius: 5px; background-color: lightgrey; border: 1px solid grey; padding:5px;}
-#SignUp :hover  {background-color: lightblue; font-style: italic;}
