--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
+<script type="text/javascript" src="{{ url_for('static', filename='function.js') }}" async defer></script>
 <meta name="google-signin-client_id" content="801689158274-gikf3j7bul5evn4gl2fr43lhtahu20dn.apps.googleusercontent.com">
 </head>
 
@@ -11,15 +12,36 @@
 <div class = 'pane quarter'>
 	<h1>Great Medieval Weapons Catalog</h1>
 
-	<h3></h3></br>
-	<p><a href="{{url_for('loginSession')}}">Login</a></p>
-	<p><a href="{{url_for('logout')}}">Logout</a></p>
-	<a id="SignUp" href="{{url_for('newUser')}}">Sign up</a>
+	<h3 id="userEmail">{{email}}</h3>
+	<h3 id="userGoogle"></h3>
 	</br>
-	</br>
-	<div class="g-signin2" data-onsuccess="onSignIn"></div>
-	<a id="Glogout" class="glogout" href="#" onclick="signOut();">Sign out</a>
+	<div id="loginTab" class = 'pane quarter'>
+    <form action="#" method = 'post'>
 
+
+    	<p>email:</p>
+    		<input type ='text' size='30' name='email' required>
+      <p>password:</p>
+      	<input type ='password' size='30' name='password' required>
+  		</br>
+  		</br>
+
+    <input id="login" type='submit' value='Login'>
+    </form>
+		<input type='button' value='hide' onclick="buttonHide();">
+		<br>
+    <br>
+  </div>
+
+	<div id="buttons">
+			<p><a id="DBlogin"  onclick="loginTabShow();" ><input type='button' value='Login'></a></p>
+			<a id="SignUp"  href="{{url_for('newUser')}}"><input type='button' value='Sing Up'></a>
+			<p><a id="DBlogout"  href="{{url_for('logout')}}" onclick="DBlogout();"><input type='button' value='Log Out'></a></p>
+			</br>
+			</br>
+			<div class="g-signin2" data-onsuccess="onSignIn"></div>
+			<a id="Glogout" href="#" onclick="signOut();"><input type='button' value='Sing Out Google'></a>
+	</div>
  <div class="itemspane">
 
 		<a href="{{ url_for('newCategory')}}" > <h3> Create a New Category </h3> </a>
@@ -38,29 +60,6 @@
 	</div>
 
 </div>
-
-<script type="text/javascript">
-	$('#Glogout').hide();
-
-	function onSignIn(googleUser) {
-		var profile = googleUser.getBasicProfile();
-		var mail = profile.getEmail();
-		$('#Glogout').show();
-		$.ajax({
-			type: "POST",
-			url: "/gconnect",
-			data: {mail:mail},
-		});
-	}
-
-	function signOut() {
-		var auth2 = gapi.auth2.getAuthInstance();
-		auth2.signOut().then(function () {
-			console.log('User signed out.');
-		});
-		$('#Glogout').hide();
-	}
-</script>
 </body>
 
 </html>
