--- a/templates/loginInvalido.html
+++ b/templates/loginInvalido.html
@@ -8,7 +8,7 @@
 </br>
 <p>Invalid Email or Password.</p>
 
-<a href="{{url_for('loginSession')}}" > HOME </a>
+<a href="{{ url_for('showCategories') }}" > HOME </a>
 
 </body>
 </html>
